# kpaface

./: CMakeLists.txt  INDIVIDUAL_FRONTAL_AFLW_SPLIT_1.xml
demo/: CMakeLists.txt  DetectedFace.cpp  DetectedFace.h  ImageDisplay.cpp  ImageDisplay.h  LibkfaceFaceDetector.h  demo.cpp  demo.h  main.cpp
libkpaface/: CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  FlandmarkDetector.cpp  FlandmarkDetector.h  OpenCVFaceDetector.cpp  OpenCVFaceDetector.h  structs.h
libkpaface/LandmarkModels/: JOINT_MV_AFLW_SPLIT_1_-30deg.xml  JOINT_MV_AFLW_SPLIT_1_30deg.xml
test/: LibkfaceFaceDetector.cpp  main.cpp  test.cpp  test.h
